# Sumas-de-Riemann

./: .gitignore  CMakeLists.txt  Dominio.cpp  Dominio.h  ExpressionParser.cpp  ExpressionParser.h  Graficadora.py  JavaManager.cpp  JavaManager.h  JsonIO.cpp  JsonIO.h  PythonManager.cpp  PythonManager.h  Utils.cpp  cutintegral.cpp  cutintegral.h  main.cpp
Interfaz/: Funcion.json  dependency-reduced-pom.xml  pom.xml
Interfaz/data/: Funcion.json  Resultado.json
Interfaz/src/main/java/aplication/: App.java
Interfaz/src/main/java/controllers/: InterfazController.java
Interfaz/src/main/java/utils/: Paths.java  comando
Interfaz/src/main/resources/: Interfaz.fxml
Interfaz/src/main/resources/css/: styles.css
data/: Flag.json  Funcion.json
datos/: Datos.json  Parametros.json  Rectangulo.json
python-3.13.9-embed-amd64/: python313._pth
